<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Group Project Organizer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="retype_password">Retype Password:</string>
    <string name="create_account">Create Account</string>
    <string name="add_new_project">Add New Project</string>
    <string name="login_login">LOGIN:</string>
    <string name="login_password">PASSWORD:</string>
    <string name="login_create">CREATE ACCOUNT</string>
    <string name="GPO">GROUP PROJECT ORGANIZER</string>
    <string-array name="menu_array">
            <item>Projects List</item>
            <item>Create New</item>
            <item>Edit Profile</item>
            <item>Options</item>
            <item>Settings</item>
            <item>About</item>
    </string-array>
    <string name="drawer_open">Menu</string>
    <string name = "drawer_close">Projects List</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

</resources>
