<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/GPO"
        android:textColor="#00ff00"
        android:textSize="20sp" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText" android:layout_alignBottom="@+id/textView"
            android:layout_alignRight="@+id/textView1" android:layout_alignEnd="@+id/textView1"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_password"
            android:id="@+id/textView2" android:layout_below="@+id/textView" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginTop="74dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText2" android:layout_alignBottom="@+id/textView2"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_login"
            android:id="@+id/login_login" 
            android:layout_alignParentBottom="true" 
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignStart="@+id/textView1"
            android:onClick="onButtonClick"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_create"
            android:id="@+id/login_create" 
            android:layout_alignTop="@+id/login_login" 
            android:layout_alignRight="@+id/editText"
            android:layout_alignEnd="@+id/editText"
            android:onClick="onButtonClick"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="68dp"
        android:text="@string/login_login"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
